[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hooksniff"
version = "1.2.1"
description = "HookSniff Python SDK — Webhook delivery platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "HookSniff", email = "servetarslan02@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "attrs>=22.0.0",
    "standardwebhooks>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://hooksniff.vercel.app"
Documentation = "https://hooksniff.vercel.app/docs"
Repository = "https://github.com/servetarslan02/HookSniff"
Issues = "https://github.com/servetarslan02/HookSniff/issues"

[tool.hatch.build.targets.wheel]
packages = ["hooksniff"]
