[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hooksniff"
version = "0.4.0"
description = "Official HookSniff SDK for Python - Webhook infrastructure for developers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "HookSniff", email = "support@hooksniff.com" }]
keywords = ["hooksniff", "webhooks", "webhook", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://hooksniff.vercel.app"
Repository = "https://github.com/servetarslan02/hooksniff-python"

[tool.hatch.build.targets.wheel]
packages = ["hooksniff"]
